# expense_tracker

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  default.conf.tpl
scripts/: run.sh
sql/: task_1.sql  task_2.sql
src/: requirements.txt
src/config/: celery.py  urls.py  yasg.py
src/config/settings/: base.py  production.py
src/expense_tracker/authentication/: admin.py  apps.py  models.py  signals.py  urls.py
src/expense_tracker/authentication/api/: permissions.py  serializers.py  views.py  viewsets.py
src/expense_tracker/authentication/migrations/: 0001_initial.py
src/expense_tracker/core/: admin.py  apps.py  constants.py  models.py  signals.py  tasks.py  urls.py
src/expense_tracker/core/api/: filters.py  mixins.py  permissions.py  serializers.py  viewsets.py
src/expense_tracker/core/migrations/: 0001_initial.py
